# pm-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  PROJECT_PLAN.md  QA_PLAN.md  QUESTIONS_LOG.md  README.md  SESSION_LOG.md  TASKS.md  bandit.yaml  prd.md  pyproject.toml  requirements.txt
.claude/: settings.json
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_api.py  test_architecture.py  test_artifact_manager.py  test_artifact_sync.py  test_briefing.py  test_chat_service.py  test_content_gate.py  test_context_injection.py  test_crud.py  test_deep_strategy.py  test_deep_strategy_models.py  test_e2e_phase1a.py  test_folder_browser.py  test_golden_fixtures.py  test_intake.py  test_integration.py  test_job_runner.py  test_llm_client.py  test_log_session.py  test_lpd_crud.py  test_lpd_manager.py  test_lpd_routes.py  test_lpd_schema.py  test_phase2b_prompts.py  test_privacy_proxy.py  test_prompt_refinement.py  test_reconciliation.py  test_return_path.py  test_risk_prediction.py  test_samples.py  test_skeptical_reviewer.py  test_smoke.py  test_transcript_watcher.py  test_vtt_parser.py
docs/: CLAUDE_MD_PM_LEARNING_TEMPLATE.md  EXECUTIVE_SUMMARY.md  MEETING_INTELLIGENCE_ANALYSIS.md  PM_LEARNING_LOG.md  PRODUCT_VISION_STRATEGY.md  STRATEGY_PRESSURE_TEST.md  VPMA_ARCHITECTURE_INSIGHTS.md  architecture.mermaid  conversational_api_design.md
docs/personas/: first_outside_user.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: check_doc_freshness.py
(+113 files in other folders)
